<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="textview_ellipsis" translatable="false">…</string>

	<!-- TODO: remove these strings into individual projects to make translation easier -->
	<!-- directory selector -->
	<string name="current_location">Current: %1$s</string>
	<string name="select_directory">Select</string>
	<string name="parent_directory">Parent directory</string>
	<string name="directory_browser_error">Error: unable to open folder – please try again</string>

	<!-- menu items -->
	<string name="menu_save">Save</string>
	<string name="menu_cancel">Cancel</string>

	<!-- media controller -->
	<string name="back_description">Back</string>
	<string name="rew_description">Rewind</string>
	<string name="play_description">Play / pause</string>
	<string name="ffwd_description">Fast-forward</string>
	<string name="progress_description">Playback progress</string>
	<string name="export_description">Export this narrative</string> <!-- doesn't matter about narrative/media - only used in MediaPhone -->

</resources>
