<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingLeft="8dp"
	android:paddingStart="8dp"
	android:paddingRight="8dp"
	android:paddingEnd="8dp"
	android:background="@color/media_controller_background">

	<ImageView
		android:id="@+id/mediacontroller_spacer"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_alignParentTop="true"
		android:layout_marginBottom="4dp"
		android:background="@android:drawable/divider_horizontal_dark"
		android:contentDescription="@null" />

	<ImageButton
		android:id="@+id/prev"
		style="@style/MediaButton"
		android:layout_width="wrap_content"
		android:layout_below="@id/mediacontroller_spacer"
		android:layout_alignParentStart="true"
		android:layout_alignParentLeft="true"
		android:contentDescription="@string/back_description"
		android:src="@drawable/ic_menu_back" />

	<ImageButton
		android:id="@+id/pause"
		style="@style/MediaButton"
		android:layout_below="@id/mediacontroller_spacer"
		android:layout_centerHorizontal="true"
		android:contentDescription="@string/play_description"
		android:src="@drawable/ic_menu_pause" />

	<ImageButton
		android:id="@+id/rew"
		style="@style/MediaButton"
		android:layout_below="@id/mediacontroller_spacer"
		android:layout_toStartOf="@id/pause"
		android:layout_toLeftOf="@id/pause"
		android:contentDescription="@string/rew_description"
		android:src="@drawable/ic_menu_rewind" />

	<ImageButton
		android:id="@+id/ffwd"
		style="@style/MediaButton"
		android:layout_below="@id/mediacontroller_spacer"
		android:layout_toEndOf="@id/pause"
		android:layout_toRightOf="@id/pause"
		android:contentDescription="@string/ffwd_description"
		android:src="@drawable/ic_menu_fastforward" />

	<ImageButton
		android:id="@+id/next"
		style="@style/MediaButton"
		android:layout_width="wrap_content"
		android:layout_below="@id/mediacontroller_spacer"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:contentDescription="@string/export_description"
		android:src="@drawable/ic_menu_share" />

	<TextView
		android:id="@+id/time_current"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/pause"
		android:layout_alignParentStart="true"
		android:layout_alignParentLeft="true"
		android:layout_gravity="center_horizontal"
		android:paddingLeft="4dp"
		android:paddingTop="4dp"
		android:paddingRight="4dp"
		android:textColor="@color/media_controller_text"
		android:textIsSelectable="false"
		android:textSize="14sp"
		android:textStyle="bold"
		tools:text="0:01" />

	<TextView
		android:id="@+id/time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/pause"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_gravity="center_horizontal"
		android:paddingLeft="4dp"
		android:paddingTop="4dp"
		android:paddingRight="4dp"
		android:textColor="@color/media_controller_text"
		android:textIsSelectable="false"
		android:textSize="14sp"
		android:textStyle="bold"
		tools:text="1:00" />

	<SeekBar
		android:id="@+id/mediacontroller_progress"
		style="?android:attr/seekBarStyle"
		android:layout_width="match_parent"
		android:layout_height="30dp"
		android:layout_below="@id/pause"
		android:layout_toStartOf="@id/time"
		android:layout_toLeftOf="@id/time"
		android:layout_toEndOf="@id/time_current"
		android:layout_toRightOf="@id/time_current"
		android:contentDescription="@string/progress_description" />

</RelativeLayout>
