<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:drawable/divider_horizontal_dark"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/media_controller_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ImageButton
                android:id="@+id/back"
                style="@android:style/MediaButton"
                android:layout_width="wrap_content"
                android:contentDescription="@string/back_description"
                android:src="@drawable/ic_menu_back"
                tools:ignore="RequiredSize" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/rew"
            style="@android:style/MediaButton"
            android:contentDescription="@string/rew_description"
            android:src="@drawable/ic_menu_rewind"
            tools:ignore="RequiredSize" />

        <ImageButton
            android:id="@+id/pause"
            style="@android:style/MediaButton"
            android:contentDescription="@string/play_description"
            android:src="@drawable/ic_menu_pause"
            tools:ignore="RequiredSize" />

        <ImageButton
            android:id="@+id/ffwd"
            style="@android:style/MediaButton"
            android:contentDescription="@string/ffwd_description"
            android:src="@drawable/ic_menu_fastforward"
            tools:ignore="RequiredSize" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ImageButton
                android:id="@+id/share"
                style="@android:style/MediaButton"
                android:layout_width="wrap_content"
                android:contentDescription="@string/export_description"
                android:src="@drawable/ic_menu_share"
                tools:ignore="RequiredSize" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/media_controller_background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/time_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="4dp"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/mediacontroller_progress"
            style="?android:attr/seekBarStyle"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="4dp"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
